2014-07-31  Ed Schonberg  <schonberg@adacore.com>

	* sem_attr.adb (Analyze_Attribute, case 'Old):  The reference is
	legal if within an aspect specification for a generic subprogram.

2014-07-31  Javier Miranda  <miranda@adacore.com>

	* gnat1drv.adb (Back_End_Inlining): Set to false if
	Suppress_All_Inlining is set.
	* debug.adb: Adding documentation for -gnatd.z.
	* inline.adb (Add_Inlined_Body): Extend the -gnatn2
	processing to -gnatn1 for calls to Inline_Always routines.
	(Add_Inlined_Subprogram): Remove previous patch.

2014-07-31  Ed Schonberg  <schonberg@adacore.com>

	* sem_ch13.adb (Check_One_Function): Apply properly the static
	semantic rules for indexing aspects and the functions they denote.

2014-07-31  Javier Miranda  <miranda@adacore.com>

	* debug.adb: Complete documentation of -gnatd.z.

2014-07-31  Bob Duff  <duff@adacore.com>

	* gnat_ugn.texi: Minor doc fixes.

2014-07-31  Robert Dewar  <dewar@adacore.com>

	* sem_aggr.adb (Resolve_Array_Aggregate): Fix posting of missing
	index value.

2014-07-31  Tristan Gingold  <gingold@adacore.com>

	* s-unstyp.ads (Packed_Byte): Make this type universal aliasing.
	(Packed_Bytes1): Make component aliased.

2014-07-31  Robert Dewar  <dewar@adacore.com>

	* s-unstyp.ads, s-fileio.adb: Minor reformatting.

2014-07-31  Robert Dewar  <dewar@adacore.com>

	* inline.adb, gnat1drv.adb, exp_ch6.adb, s-fileio.adb: Minor
	reformatting.

2014-07-31  Eric Botcazou  <ebotcazou@adacore.com>

	* gcc-interface/utils2.c ((build_binary_op): Don't set TREE_THIS_NOTRAP
	on array references here, now done more selectively in trans.c.

2014-07-31  Doug Rupp  <rupp@adacore.com>

	* gcc-interface/misc.c (gnat_init_gcc_fp(): Set flag_errno_math to 0.

2014-07-31  Hristian Kirtchev  <kirtchev@adacore.com>

	* sem_util.adb (Is_Effectively_Volatile): New routine.

2014-07-31  Fedor Rybin  <frybin@adacore.com>

	* gnat_ugn.texi: Document --test-duration option for gnattest.

2014-07-31  Javier Miranda  <miranda@adacore.com>